{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 100,
  "lineage": "179deda9-82ed-efcd-80f5-c04e240657d7",
  "resources": [
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:993224676433:internet-gateway/igw-0aa9006d15b95b022",
            "id": "igw-0aa9006d15b95b022",
            "owner_id": "993224676433",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-005b8d31104f78e8a"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0aa9006d15b95b022",
            "id": "r-rtb-03830c8ec0b2f93471080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03830c8ec0b2f9347",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.this",
            "module.aws_vpc.aws_route_table.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ea144de0c154e56b",
            "owner_id": "993224676433",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-private",
              "Terraform": "true"
            },
            "vpc_id": "vpc-005b8d31104f78e8a"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03830c8ec0b2f9347",
            "owner_id": "993224676433",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aa9006d15b95b022",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-005b8d31104f78e8a"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b2480df9cf73f78",
            "route_table_id": "rtb-0ea144de0c154e56b",
            "subnet_id": "subnet-0e52e89a92f6eec43"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06849b2e2a6feca36",
            "route_table_id": "rtb-0ea144de0c154e56b",
            "subnet_id": "subnet-0e73c7255f1de7cd8"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a773b953a1e9e705",
            "route_table_id": "rtb-0ea144de0c154e56b",
            "subnet_id": "subnet-09347e5a994c52f4e"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ee4d64f44691e3c",
            "route_table_id": "rtb-03830c8ec0b2f9347",
            "subnet_id": "subnet-08c3d098dfd34c527"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.public",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7fd139c347d2ffe",
            "route_table_id": "rtb-03830c8ec0b2f9347",
            "subnet_id": "subnet-03c94ef474cac34f8"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.public",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061ce730aa7a45fbd",
            "route_table_id": "rtb-03830c8ec0b2f9347",
            "subnet_id": "subnet-007dfbeabb2b922b5"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.public",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:993224676433:subnet/subnet-0e52e89a92f6eec43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e52e89a92f6eec43",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "993224676433",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-private-eu-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-005b8d31104f78e8a"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:993224676433:subnet/subnet-0e73c7255f1de7cd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0e73c7255f1de7cd8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "993224676433",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-private-eu-west-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-005b8d31104f78e8a"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:993224676433:subnet/subnet-09347e5a994c52f4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-09347e5a994c52f4e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "993224676433",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-private-eu-west-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-005b8d31104f78e8a"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:993224676433:subnet/subnet-08c3d098dfd34c527",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-08c3d098dfd34c527",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "993224676433",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-public-eu-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-005b8d31104f78e8a"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:993224676433:subnet/subnet-03c94ef474cac34f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-03c94ef474cac34f8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "993224676433",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-public-eu-west-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-005b8d31104f78e8a"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:993224676433:subnet/subnet-007dfbeabb2b922b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-007dfbeabb2b922b5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "993224676433",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-public-eu-west-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-005b8d31104f78e8a"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:993224676433:vpc/vpc-005b8d31104f78e8a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03683c39075969e68",
            "default_route_table_id": "rtb-0e800c4164b55cdea",
            "default_security_group_id": "sg-09e1873cd5799fb26",
            "dhcp_options_id": "dopt-a3e8cdcb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-005b8d31104f78e8a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e800c4164b55cdea",
            "owner_id": "993224676433",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}